tests/samples/invalid/variable_shadowing_constant.pn

const X: i32 = 10;

fn foo() -> i32
{
	var X = 400;
	return: X
}
